--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,18 @@
 <project>
 
     <property name="project"    value="streams"/>
+
     <property name="src.dir"    value="src"/>
     <property name="build.dir"  value="build"/>
     <property name="class.dir"  value="${build.dir}/classes"/>
+
     <property name="jar.dir"    value="${build.dir}/jar"/>
     <property name="jar.jar"    value="${jar.dir}/${project}.jar"/>
     <property name="jdoc.dir"   value="jdoc"/>
-    <property name="class.main" value="TestStreamPackage"/>
+
+    <property name="tests"      value="TestStreamPackage"/>
+    <property name="examples"   value="StreamsExample"/>
+    <property name="class.main" value="${examples}"/>
 
 
     <target name="clean">
@@ -44,6 +49,10 @@
 
 
     <target name="run" depends="jar">
+        <java jar="${jar.jar}" fork="true"/>
+    </target>
+
+    <target name="example" depends="jar">
         <java jar="${jar.jar}" fork="true"/>
     </target>
 
