ktvm: improve i_32inc and i_32dec

--- a/ktvm/Build
+++ b/ktvm/Build
@@ -2,7 +2,8 @@
 
 set -e
 
-clang -g -Wall ktvm.c -o ktvm
+#clang -g -Wall ktvm.c -o ktvm
+gcc -O2 ktvm.c -o ktvm
 
 case "$1"  in
   run)      ./ktvm            ;;
